yaml/02/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: my-namespace
spec:
  podSelector: {}
  policyTypes:
    - Ingress
